<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.reyes.edittext.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher"
                android:layout_marginRight="15dp"
                android:foregroundGravity="center"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyStile"
                app:counterMaxLength="30"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_n"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher"
                android:layout_marginRight="15dp"
                android:foregroundGravity="center"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_t"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher"
                android:layout_marginRight="15dp"
                android:foregroundGravity="center"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyStile"
                app:counterMaxLength="30"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_c"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:hint="@string/str_bnt1"
                android:layout_marginLeft="40dp"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:hint="@string/str_bntc"
                android:layout_marginLeft="40dp"
                />

        </LinearLayout>










    </LinearLayout>
    <!--

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_ape"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_bnt"/>
        -->


</LinearLayout>
